--- a/css/home.css
+++ b/css/home.css
@@ -65,8 +65,61 @@ nav {
           justify-content: space-between;
   padding: 20px 30px;
   width: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(#000a), to(#0000));
-  background: linear-gradient(#000a, #0000);
+}
+
+nav span {
+  font-weight: 900;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.menuFullscreen {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #222d;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menuFullscreen span#close {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.menuFullscreen ul#menuList {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+.menuFullscreen ul#menuList li {
+  padding: 20px 0;
+  font-weight: 900;
+  font-size: 20px;
+}
+
+.menuFullscreen ul#menuList li:hover {
+  text-decoration: underline;
+  cursor: poiner;
 }
 
 .bgModal {
@@ -160,7 +213,7 @@ ul li a:hover {
 
 .landingPage {
   height: 100vh;
-  background: url("/resources/bgLanding.jpg");
+  background: url("/resources/wallpaper.jpg");
   background-size: cover;
   background-position: center;
   display: -webkit-box;
@@ -176,7 +229,77 @@ ul li a:hover {
 
 .landingPage h1 {
   color: #f5f5f5;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: 700;
+}
+
+.landingPage img {
+  width: 200px;
+}
+
+.boutSection {
+  background-color: #f5f5f5;
+  text-align: center;
+  min-height: 100vh;
+}
+
+.boutSection .boutHeader {
+  padding: 0 30px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, #6CB51E), color-stop(0, #f5f5f5));
+  background: linear-gradient(#6CB51E 70%, #f5f5f5 0);
+}
+
+.boutSection .boutHeader h1 {
+  font-weight: 900;
+  padding: 20px 0;
+  color: #fff;
+}
+
+.boutSection .boutHeader .imgHolder {
+  width: 100%;
+  height: 200px;
+  background-color: #fff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 2px 2px #0003;
+          box-shadow: 0 2px 2px #0003;
+}
+
+.boutSection p {
+  color: #7B7B7B;
+  font-size: 18px;
+  padding: 0 30px;
+}
+
+.boutSection button {
+  margin: 50px 0;
+  border-radius: 4px;
+  border: none;
+  background-color: #6CB51E;
+  font-weight: 900;
+  text-transform: uppercase;
+  color: #f5f5f5;
+  padding: 10px 20px;
+}
+
+footer {
+  padding: 20px 30px;
+  background-color: #222;
+  color: #fff;
+  position: relative;
+}
+
+footer h1 {
+  font-size: 24px;
+  margin: 0 0 20px 0;
+}
+
+footer p {
+  margin: 5px 0;
+}
+
+footer div {
+  font-weight: lighter;
+  padding: 10px 0 0 0;
+  font-size: 14px;
 }
 /*# sourceMappingURL=home.css.map */
