--- a/css/home.css
+++ b/css/home.css
@@ -84,6 +84,7 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: #f5f5f5;
   padding: 20px 30px;
   width: 100%;
 }
@@ -234,7 +235,7 @@ ul li a:hover {
 
 .landingPage {
   height: 100vh;
-  background: url("/resources/wallpaper.jpg");
+  background: url("/resources/wallpaper.jpeg");
   background-size: cover;
   background-position: center;
   display: -webkit-box;
@@ -279,7 +280,9 @@ ul li a:hover {
 .boutSection .boutHeader .imgHolder {
   width: 100%;
   height: 200px;
-  background-color: #fff;
+  background: url("../resources/bebidas.jpeg");
+  background-size: contain;
+  border: 5px solid #fff;
   border-radius: 4px;
   -webkit-box-shadow: 0 2px 2px #0003;
           box-shadow: 0 2px 2px #0003;
