--- a/css/produtos.scss
+++ b/css/produtos.scss
@@ -13,6 +13,7 @@ body{
     padding: 0;
     font-family: 'Lato', sans-serif;
     position: relative;
+    background-color: #f5f5f5;
 }
 
 //Const
@@ -53,17 +54,27 @@ p{
 
 .card{
     width: 100%;
-    min-height: 300px;
+    height: auto;
     border-radius: 4px;
     box-shadow: 0 2px 2px #0002;
     margin: 30px 0;
     padding: 20px;
+    background-color: #fff;
 
     cursor: pointer;
 
     .productImage{
         height: 220px;
         width: 100%;
+        margin: 0 0 10px 0;
+        overflow: hidden;
+        border-radius: 4px;
+        @media (max-width: 1280px) {
+            height: 150px;
+        }
+        img{
+            max-width: 100%;
+        }
     }
     
     h3{
@@ -81,7 +92,7 @@ p{
         flex-direction: row;
         flex-wrap: wrap;
         .card{
-            width: 33%;
+            width: 30%;
             margin: 20px 20px 20px 0;
         }
     }
