--- a/css/home.scss
+++ b/css/home.scss
@@ -198,7 +198,7 @@ ul{
 .landingPage{
     height: 100vh;
     
-    background: url('/resources/wallpaper.jpeg');
+    background: url('../resources/wallpaper.jpeg');
     background-size: cover;
     background-position: center;
 
