--- a/css/home.css
+++ b/css/home.css
@@ -235,7 +235,7 @@ ul li a:hover {
 
 .landingPage {
   height: 100vh;
-  background: url("/resources/wallpaper.jpeg");
+  background: url("../resources/wallpaper.jpeg");
   background-size: cover;
   background-position: center;
   display: -webkit-box;
